# aries-agent-controller

./: .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: admin.py  middleware.py  models.py  serializers.py  urls.py  views.py  webhooks.py
api/example requests/: CreateSchema.json  GetRev.json  IssueCred.json  UserSchema.json  agentConnect.json  register.json  revokeCred.json  verifyProof.json
api/migrations/: 0001_initial.py  0002_user_holder_to_verifier_conn_and_more.py  0003_user_msp_id.py  0004_rename_msp_id_user_mspid.py
api/services/: agentservice.py  awssecrets.py  issuecredservice.py  proof-presentation.json  proof-request.json  revokecredservice.py  schemaservice.py  vaultservice.py  verifycredservice.py  walletservice.py
aws-scripts/: agent_ec2_setup.sh  check_network_connectivity.sh  copy_genesis_files.sh  ec2_infra_setup.sh  ec2_single_validator.sh  generate_random_seeds.sh  indy_validator.sh  run_on_all_validators.sh  setup_indy_node.sh
aws-scripts/VM scripts/: genesis_node_setup.sh  ip_tables.sh  setup_vm.sh
aws-scripts/VM scripts/agent-setup/: run.sh
aws-scripts/VM scripts/create-genesis/: README.md  create-pool-genesis.sh  create_indy_network.sh  headers.csv  install-indy.sh  run.sh  server_ips.txt
aws-scripts/VM scripts/genesis/: run.sh
aws-scripts/VM scripts/indy-cli/: README.md  indy-cli-setup.sh  indy-genesis-setup.sh  run.sh
aws-scripts/templates/dev/: nodes.csv  trustees.csv
charts/: Chart.yaml  values.yaml
charts/values/: dev.yaml  prod.yaml  stg-old.yaml  stg.yaml
deployment/: prod.params
docker/: docker-compose.yml
docker/agents/: holder.sh  issuer.sh
docker/local/: docker-compose.yml
issuer/: .env.sample  asgi.py  settings.py  urls.py  wsgi.py
utils/: bash.sh
